--- a/actualidad.css
+++ b/actualidad.css
@@ -40,7 +40,7 @@ margin: 0 auto;
   font-size: 3em;
 }
 .noticias_slider {
-   max-width: 1200px;
+   max-width: 100%;
 	margin: 0 auto;
 }
 .div_slider{
@@ -130,12 +130,12 @@ animation-timing-function: linear;
 .noticias_contenedor{
   display: grid;
   justify-content: center;
-  grid-gap: 2rem;
-  grid-template-columns: 32vw 32vw;
+  grid-gap: 4rem;
+  grid-template-columns: 50% 50%;
 
   overflow: hidden;
- margin: 2rem;
- padding: 2rem;
+ margin: 4rem;
+ padding: 4rem;
 }
 .contenedor_img{
   width: 100%;
@@ -156,4 +156,18 @@ color: rgba(64, 62, 62, 0.603);
   font-weight: 700;
   padding-bottom: 2rem;
  
+}
+@media screen and (min-width: 481) and (max-width: 768px) {
+
+}
+
+/*Movil*/
+
+@media screen and (max-width: 480px) {
+  /* section {
+    width: 25%;
+  } */
+  .noticias_contenedor{
+    font-size: 0.625girem;
+  }
 }
