--- a/homeStyle.css
+++ b/homeStyle.css
@@ -321,9 +321,47 @@ input[type="submit"]:hover {
 
 /*-----------------------------EQUIPOS-------------------------------------*/
 
+/*Fotos*/
+
+.amorePro,
+.amoreFem,
+.amoreJuv,
+.amoreInf {
+  border: black 0.3rem solid;
+  margin-left: 30%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  width: 50%;
+
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/*Titulos*/
+
+.h2--equipos {
+  font-size: 2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.h1--equipos {
+  color: rgb(34, 58, 177);
+  font-size: 4rem;
+  padding: 1rem;
+}
+
+.futProfesional, .femProfesional, .futJuvenil, .amorebietaInfantil{
+  padding: auto;
+}
+
+
+
+
 .fotosCategorias {
   display: grid;
-  gap: 2rem;
+  grid-gap: 2rem;
   grid-template-columns: auto auto;
   margin: 4rem ;
 }
@@ -337,6 +375,9 @@ input[type="submit"]:hover {
   );
   text-align: center;
 }
+.foto1{
+  width: 100%;
+}
 
 .futPro {
   width: 100%;
@@ -348,7 +389,9 @@ input[type="submit"]:hover {
   width: 100%;
   height: 100%;
 }
-
+.imagen{
+  height: 400px;
+}
 .futJuv {
   width: 100%;
   height: 100%;
@@ -417,40 +460,7 @@ input[type="submit"]:hover {
   padding: 4rem;
 }
 
-.amorePro{
-  border: black 0.3rem solid;
-  margin-left: 20%;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  font-size: 1rem;
-  width: 50%;
-}
 
-.amoreFem,
-.amoreJuv,
-.amoreInf {
-  border: black 0.3rem solid;
-  margin-left: 25%;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  font-size: 1rem;
-  width: 50%;
-
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-.h2--equipos {
-  font-size: 3rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.h1--equipos {
-  color: rgb(34, 58, 177);
-  font-size: 5rem;
-  padding: 1rem;
-}
 
 /*----------------------------- FIN EQUIPOS-------------------------------------*/
 
@@ -650,10 +660,7 @@ input[type="submit"]:hover {
     width: 25%;
   } */
 }
-.futProfesional,
-.amorePro {
-  width: 70%;
-}
+
 
 
 
