nuevos puntos de ruptura

--- a/homeStyle.css
+++ b/homeStyle.css
@@ -268,10 +268,13 @@ nav a:hover {
   .equipo_enfrentado_item{
     width: 20%;
   }
+  .equipo_enfrentado{
+    gap:1rem
+  }
 
   .clasification_flex{
     align-items: center;
-    gap: 5rem;
+    gap: 3rem;
   }
   .h2_clasification{
     text-align: left;
@@ -649,6 +652,7 @@ input[type="submit"]:hover {
 
 .patrocinador {
   width: 20rem;
+  position: relative;
 }
 
 .foot__patrocinadores_div {
@@ -679,13 +683,45 @@ input[type="submit"]:hover {
 }
 
 
+
+
 /*-----------------------------RESPONSIVE-------------------------------------*/
 
+@media screen and (max-width:1283px) {
+  
+  .h2_home{
+    color: #45a049;
+  }
+  .club_item, .contact form{
+    width: 90%;
+    padding-top: 0.5rem;
+  }
+
+  .clasification_item{
+    width: 45%;
+
+  }
+
+  .club{
+    background-image: linear-gradient(rgb(4, 4, 77), rgba(245, 245, 243,0)),
+       url("https://sdamorebieta.eus/wp-content/uploads/2022/11/Amorebieta-Nucia-2--1200x800.jpg");
+  }
+
+  .patrocinador {
+    width: 25rem;
+  }
+
+ }
 
 
 /*Tablet*/
 
-@media screen and (max-width:1024px) {
+
+@media screen and (max-width:900px) {
+
+  .h2_home{
+    color: #aa0b75;
+  }
   
   .estadio-imagen_historia {
     display: grid;
@@ -718,14 +754,32 @@ input[type="submit"]:hover {
 
 /*Movil*/
 
-@media screen and (max-width: 480px) {
-  /* section {
-    width: 25%;
-  } */
+@media screen and (max-width: 640px) {
+
+  .h2_home{
+    color: #eff312;
+  
+  }
+
 
 .amorePro {
   width: 70%;
 }
+}
+
+
+@media screen and (max-width: 480px) {
+
+
+  .h2_home{
+    color: #f1032b;
+  
+  }
+
+  .gridd_home_item{
+    width: 50%;
+  }
+
 
 }
 /*Tablet*/
