--- a/homeStyle.css
+++ b/homeStyle.css
@@ -380,7 +380,6 @@ input[type="submit"]:hover {
   margin-bottom: 1rem;
   font-size: 1rem;
   width: 50%;
-
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -437,7 +436,7 @@ input[type="submit"]:hover {
   height: 100%;
 }
 .imagen{
-  height: 400px;
+  height: 350px;/*--------------------------------*/
 }
 .futJuv {
   width: 100%;
@@ -691,17 +690,17 @@ input[type="submit"]:hover {
 
 /*-----------------------------RESPONSIVE-------------------------------------*/
 
+/* Diseño para celulares */
 
 
-/*Tablet*/
 
-@media screen and (max-width:1024px) {
-  
-  .estadio-imagen_historia {
-    display: grid;
-    grid-template-columns: auto auto ;
-   
-  
+
+/* Diseño para tabletas */ 
+@media screen and (max-width: 900px) {
+	
+
+  .imagen{
+    height: 200px;
   }
 /* ----Responsivo Zucelys---- */
 
@@ -728,10 +727,8 @@ input[type="submit"]:hover {
 
 /*Movil*/
 
-@media screen and (max-width: 480px) {
-  /* section {
-    width: 25%;
-  } */
+@media screen and (max-width: 640px) {
+ 
 }
 
 
