--- a/homeStyle.css
+++ b/homeStyle.css
@@ -687,6 +687,164 @@ input[type="submit"]:hover {
 .foot__legal a {
   color: white;
 }
+/*------------------------------ACTUALIDAD----------------------------------*/
+
+.noticias_h2{
+  padding: 2rem;
+  text-align: center;
+  
+}
+.actualidad_h2{
+font-size: 3em;
+padding: 0.8rem;
+margin-left: 8rem;
+}
+.noticias_h3{
+padding: 2rem;
+  text-align: center;
+  font-size: 2em;
+}
+
+.noticias_section{
+width: 55%;
+margin: 0 auto;
+
+}
+.noticias_imagen {
+max-width: 100%;
+padding-bottom: 0.8rem;
+padding-top: 0.8rem;
+
+
+}
+.noticias_article{
+ text-align: justify;
+ padding: 0.6rem;
+ padding-bottom: 2rem;
+}
+.noticias_article p:first-child::first-letter{
+font-size: 3em;
+}
+.noticias_slider {
+ max-width: 100%;
+margin: 0 auto;
+}
+.div_slider{
+  position: relative;
+} 
+.slides_ul {
+position: relative;
+display: flex;
+overflow: hidden;
+padding-left: 0;
+     
+}
+.slide_li {
+list-style: none;
+background-color: white;
+width: 100%;
+flex-shrink: 0;
+animation-name: slide;
+animation-duration: 15s;
+animation-iteration-count: infinite;
+animation-timing-function: linear;
+}
+.slides_ul:hover .slide_li {
+animation-play-state: paused;
+}
+@keyframes slide {
+0% { transform: translateX(0); }
+20% { transform: translateX(0); }
+
+25% { transform: translateX(-100%); }
+45% { transform: translateX(-100%); }
+
+50% { transform: translateX(-200%); }
+70% { transform: translateX(-200%); }
+
+75% { transform: translateX(-300%); }
+100% { transform: translateX(-300%); }
+
+}
+.text_slider{
+position: absolute;
+  bottom: 8vw;
+ right: 4vw;
+  background-color: rgba(56, 56, 123, 0.5);
+  color: aliceblue;
+  font-size: 2.5vw;
+}
+.slide_li img {
+width: 100%;
+vertical-align: top;
+}
+.slide_li a {
+
+display: inline-block;
+position: relative;
+}
+.noticias_link{
+color: aliceblue;
+font-size: medium;
+}
+.slider-controler {
+position: absolute;
+left: 0;
+right: 0;
+bottom: 20px;
+text-align: center;
+padding: 5px;
+background-color: rgba(0,0,0,0.5);
+  
+z-index: 100;
+}
+
+.slider-controler li {
+margin: 0 0.5rem;
+display: inline-block;
+vertical-align: top;
+  list-style: none;
+}
+
+.slider-controler a {
+display: inline-block;
+vertical-align: top;
+text-decoration: none;
+color: white;
+font-size: 1.5rem;
+}
+.noticias_contenedor{
+display: grid;
+justify-content: center;
+grid-gap: 4rem;
+grid-template-columns: 50% 50%;
+
+overflow: hidden;
+margin: 4rem;
+padding: 4rem;
+}
+.contenedor_img{
+width: 100%;
+height: 100%;
+}
+.contenedor_img:hover{
+transform: rotateY(180deg);
+
+}
+.noticias_contenedor_SdAmorebieta{
+text-transform: uppercase;
+letter-spacing: .02em;
+padding-bottom: 1rem;
+font-size: x-small;
+color: rgba(64, 62, 62, 0.603);
+}
+.noticias_contenedor_text{
+font-weight: 700;
+padding-bottom: 2rem;
+
+}
+
+/*---------------------------FIN ACTUALIDAD -------------------------------*/
 
 
 /*-----------------------------RESPONSIVE-------------------------------------*/
@@ -732,12 +890,22 @@ input[type="submit"]:hover {
   /* section {
     width: 25%;
   } */
+  /* Edurne Responsive */
+  .noticias_contenedor{
+    display: block;
+  }
+    
+}
+
+
+  /* ----FIN  Responsivo Edurne---- */
+
 }
 
 
 
 /*Tablet*/
-/* Edurne Responsive */
+
 
 
 /*-----------------------------FIN RESPONSIVO-------------------------------------*/
