--- a/homeStyle.css
+++ b/homeStyle.css
@@ -725,7 +725,7 @@ animation-play-state: paused;
 .text_slider{
 position: absolute;
   bottom: 8vw;
- right: 4vw;
+  right: 4vw;
   background-color: rgba(56, 56, 123, 0.5);
   color: aliceblue;
   font-size: 2.5vw;
@@ -751,8 +751,6 @@ bottom: 20px;
 text-align: center;
 padding: 5px;
 background-color: rgba(0,0,0,0.5);
-  
-z-index: 100;
 }
 
 .slider-controler li {
@@ -925,7 +923,10 @@ padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
   width: 80%;
-  padding: 0;
+  margin: 0 auto;
+}
+.text_slider{
+  bottom: 16vw; 
 }
 }
 
@@ -990,13 +991,15 @@ padding-bottom: 2rem;
 .noticias_contenedor{
     display: flex;
     flex-direction: column;
-    width: 80%;
-   margin: 0;
-   padding: 0;
-   justify-content: center;
+    width: 100%;
+   margin: 0 auto;
+   padding-top: 2rem;
+ 
   
 }
-
+.text_slider{
+  bottom: 14vw; 
+}
   .equipo_enfrentado_span{
     font-size: 1.5rem;
   }
