--- a/homeStyle.css
+++ b/homeStyle.css
@@ -4,12 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 html,
 body {
   width: 100%;
-  /* min-width: 320px; */
+  min-width: 320px;
   font-size: 16px;
   font-family: Arial, Verdana, Tahoma, Trebuchet, sans-serif;
 }
@@ -56,8 +57,8 @@ a:hover {
   background-image: url(./img/header-image.png);
   background-repeat: no-repeat;
   background-size: cover;
-
   height: 40rem;
+
 }
 
 #menu {
@@ -90,6 +91,10 @@ nav a:hover {
   align-items: center;
 }
 
+.logo_etiqueta2{
+  display: none;
+}
+
 
 .logo{
     position: relative;
@@ -117,6 +122,25 @@ nav a:hover {
 .h2_home--small{
   font-size: 1.7rem;
 
+}
+
+/* .menu_item{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+} */
+
+.checkbtn_menu{
+  font-size: 30px;
+  color: rgba(9,51,109,255);
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check_menu{
+  display: none;
 }
 
 /*--Proximos Partidos-------------------------------------*/
@@ -941,10 +965,17 @@ padding-bottom: 2rem;
     font-size: 14px;
   }
 
+  .h1_home{
+    font-size: 30px;
+  }
+
   .logo{
     position: relative;
-    width: 90%;
-    padding-top: 3rem;
+    width: 50%;
+  }
+
+  .logo_etiqueta {
+    gap: 0rem;
   }
 
   #menu {
@@ -982,6 +1013,50 @@ padding-bottom: 2rem;
 
   .clasification_item{
     height: 300px;
+  }
+
+ #menu nav {
+   padding-top: 0rem;
+   display: inline-block;
+  }
+  .checkbtn_menu{
+    display: block;
+  } 
+  .menu_item{
+    flex-direction: column;
+    gap: 0rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-top: 3rem;
+    padding-left: 3rem;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+
+  #menu{
+    opacity: 1;
+  }
+
+  header{
+    z-index: 100;
+  }
+
+  #menu nav ul li{
+    margin: 40px 0;
+    line-height: 30px;
+  }
+
+  #check_menu:checked ~ ul{
+    left:0;
+  } 
+
+  .logo_etiqueta2{
+    display: flex;
   }
 /* FIN Responsive Zucelys */
 
