--- a/homeStyle.css
+++ b/homeStyle.css
@@ -862,6 +862,8 @@ padding-bottom: 2rem;
 
  /* ----FIN Responsivo GORKA---- */
 
+/* ----Responsivo NASREDDIN---- */
+
 
   .estadio-imagen_historia {
     display: grid;
@@ -869,7 +871,8 @@ padding-bottom: 2rem;
 
 
   }
-  
+  /* ----FIN Responsivo NASREDDIN---- */
+
 
 /* ----Responsivo Zucelys---- */
 
