--- a/homeStyle.css
+++ b/homeStyle.css
@@ -629,7 +629,8 @@ nav a:hover {
 }
 
 .foot_redes_ico{
-  gap:0.5rem
+  gap: 1.5rem;
+  font-size: 2.5em;
 }
 
 .foot__legal {
@@ -653,6 +654,24 @@ nav a:hover {
 .foot__legal a {
   color: white;
 }
+
+.fa-facebook:hover {
+  color: rgb(30, 50, 163);
+}
+
+.fa-twitter:hover {
+  color:rgb(64, 187, 203);
+}
+
+.fa-youtube:hover {
+  color: rgb(226, 10, 10);
+}
+
+.fa-instagram:hover {
+  color: rgb(217, 41, 94)
+}
+
+
 /*------------------------------ACTUALIDAD----------------------------------*/
 
 .noticias_h2{
